--- a/design/design.css
+++ b/design/design.css
@@ -1,8 +1,3 @@
-body {
-    padding-top: 70px;
-    padding-bottom: 30px;
-}
-
 .box {
     margin-bottom: 20px;
     background-color: #fff;
@@ -76,13 +71,13 @@ body {
  * The dnd-list should always have a min-height,
  * otherwise you can't drop to it once it's empty
  */
-.nestedDemo .designs ul[dnd-list] {
+.design .designs ul[dnd-list] {
     margin: 0px;
     min-height: 42px;
     padding-left: 0px;
 }
 
-.nestedDemo .designs li {
+.design .designs li {
     background-color: #fff;
     border: 1px solid #ddd;
     display: block;
@@ -94,7 +89,7 @@ body {
  * to see where he is dropping his element, even if the element is huge. The
  * .dndDragging class is automatically set during the drag operation.
  */
-.nestedDemo .designs .dndDragging {
+.design .designs .dndDragging {
     opacity: 0.7;
 }
 
@@ -103,7 +98,7 @@ body {
  * operation. It makes sense to hide it to give the user the feeling that he's
  * actually moving it. Note that the source element has also .dndDragging class.
  */
-.nestedDemo .designs .dndDraggingSource {
+.design .designs .dndDraggingSource {
     display: none;
 }
 
@@ -111,7 +106,7 @@ body {
  * An element with .dndPlaceholder class will be added as child of the dnd-list
  * while the user is dragging over it.
  */
-.nestedDemo .designs .dndPlaceholder {
+.design .designs .dndPlaceholder {
     background-color: #ddd;
     display: block;
     min-height: 42px;
@@ -119,16 +114,16 @@ body {
 
 /***************************** Element Selection *****************************/
 
-.nestedDemo .designs .selected .item {
+.design .designs .selected .item {
     color: #3c763d;
     background-color: #dff0d8;
 }
 
-.nestedDemo .designs .selected .box {
+.design .designs .selected .box {
     border-color: #d6e9c6;
 }
 
-.nestedDemo .designs .selected .box > h3 {
+.design .designs .selected .box > h3 {
     background-color: #dff0d8;
     background-image: linear-gradient(to bottom,#dff0d8 0,#d0e9c6 100%);
     border-color: #d6e9c6;
@@ -137,37 +132,37 @@ body {
 
 /***************************** Element type specific styles *****************************/
 
-.nestedDemo .designs .item {
+.design .designs .item {
     padding: 10px 15px;
 }
 
-.nestedDemo .designs .container-element {
+.design .designs .container-element {
     margin: 10px;
 }
 
-.nestedDemo .designs .container-element .column {
+.design .designs .container-element .column {
     float: left;
     width: 100%;
 }
 
 /***************************** Toolbox *****************************/
 
-.nestedDemo .toolbox ul {
+.design .toolbox ul {
     cursor: move;
     list-style: none;
     padding-left: 0px;
 }
 
-.nestedDemo .toolbox button {
+.design .toolbox button {
     margin: 5px;
     opacity: 1.0;
     width: 123px;
 }
 
-.nestedDemo .toolbox .dndDragging {
+.design .toolbox .dndDragging {
     opacity: 0.5;
 }
 
-.nestedDemo .toolbox .dndDraggingSource {
+.design .toolbox .dndDraggingSource {
     opacity: 1.0;
 }
