--- a/design/design.css
+++ b/design/design.css
@@ -73,7 +73,7 @@
  */
 .design .designs ul[dnd-list] {
     margin: 0px;
-    min-height: 42px;
+    min-height: 100px;
     padding-left: 0px;
 }
 
@@ -109,7 +109,7 @@
 .design .designs .dndPlaceholder {
     background-color: #ddd;
     display: block;
-    min-height: 42px;
+    min-height: 100px;
 }
 
 /***************************** Element Selection *****************************/
@@ -143,6 +143,13 @@
 .design .designs .container-element .column {
     float: left;
     width: 100%;
+}
+
+.feature {
+	display: inline-block;
+	width: 50px;
+	height: 100px;
+ 	background-image: url("../sbolv/user-defined.svg");
 }
 
 /***************************** Toolbox *****************************/
