Added SO templates.

--- a/design/design.css
+++ b/design/design.css
@@ -156,6 +156,26 @@
  	background-image: url("../sbolv/user-defined.svg");
 }
 
+.feature.SO0000139
+{
+	background-image: url("../sbolv/ribosome-entry-site.svg");
+}
+
+.feature.SO0000141
+{
+	background-image: url("../sbolv/terminator.svg");
+}
+
+.feature.SO0000167
+{
+	background-image: url("../sbolv/promoter.svg");
+}
+
+.feature.SO0000316
+{
+	background-image: url("../sbolv/cds.svg");
+}
+
 .horizontal {
     float: left;
 }
