--- a/design/design.css
+++ b/design/design.css
@@ -2,14 +2,15 @@
     margin-bottom: 20px;
     background-color: #fff;
     border: 1px solid transparent;
+    border-color: #bce8f1;
     border-radius: 4px;
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
     box-shadow: 0 1px 2px rgba(0,0,0,.05);
 }
 
 .box > h3 {
-    color: #333;
-    border-color: #ddd;
+    color: #31708f;
+    border-color: #bce8f1;
     border-bottom: 1px solid transparent;
     border-top-right-radius: 3px;
     border-top-left-radius: 3px;
@@ -19,49 +20,9 @@
     padding: 10px 15px;
     margin-top: 0;
     margin-bottom: 0;
-}
-
-.box-padding {
-    padding: 15px;
-}
-
-.box-padding > h3 {
-    margin: -15px;
-    margin-bottom: 15px;
-}
-
-.box-grey {
-    border-color: #ddd;
-}
-
-.box-grey > h3 {
-    background-color: #f5f5f5;
-    background-image: -webkit-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
-    background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
-}
-
-.box-blue {
-    border-color: #bce8f1;
-}
-
-.box-blue > h3 {
-    color: #31708f;
     background-color: #d9edf7;
-    border-color: #bce8f1;
     background-image: -webkit-linear-gradient(top,#d9edf7 0,#c4e3f3 100%);
     background-image: linear-gradient(to bottom,#d9edf7 0,#c4e3f3 100%);
-}
-
-.box-yellow {
-    border-color: #faebcc;
-}
-
-.box-yellow > h3 {
-    color: #8a6d3b;
-    background-color: #fcf8e3;
-    border-color: #faebcc;
-    background-image: -webkit-linear-gradient(top,#fcf8e3 0,#faf2cc 100%);
-    background-image: linear-gradient(to bottom,#fcf8e3 0,#faf2cc 100%);
 }
 
 
@@ -180,24 +141,18 @@
     float: left;
 }
 
-/***************************** Toolbox *****************************/
+/***************************** Palette *****************************/
 
-.toolbox ul {
+.palette ul {
     cursor: move;
     list-style: none;
     padding-left: 0px;
 }
 
-.toolbox button {
-    margin: 5px;
-    opacity: 1.0;
-    width: 123px;
-}
-
-.toolbox .dndDragging {
+.palette .dndDragging {
     opacity: 0.5;
 }
 
-.toolbox .dndDraggingSource {
+.palette .dndDraggingSource {
     opacity: 1.0;
 }
