--- a/design/design.css
+++ b/design/design.css
@@ -71,7 +71,9 @@
 .designs .dndPlaceholder {
     background-color: #ddd;
     display: block;
-    min-height: 100px;
+    width: 50px;
+    height: 100px;
+    float: left;
 }
 
 /***************************** Element Selection *****************************/
@@ -92,7 +94,28 @@
     color: #3c763d;
 }
 
-/***************************** Element type specific styles *****************************/
+/***************************** Palette *****************************/
+
+.palette {
+	padding-bottom: 15px
+}
+
+.palette .feature {
+    cursor: move;
+    width: 16px;
+	height: 32px;
+	background-size: 100%;
+}
+
+.palette .dndDragging {
+    opacity: 0.5;
+}
+
+.palette .dndDraggingSource {
+    opacity: 1.0;
+}
+
+/***************************** Features *****************************/
 
 .feature {
 	display: inline-block;
@@ -123,34 +146,6 @@
 
 .horizontal {
     float: left;
-}
-
-/***************************** Palette *****************************/
-
-.palette {
-	float: left;
-	clear: both;
-	width: 100%;
-}
-
-.palette ul {
-    cursor: move;
-    list-style: none;
-    padding-left: 0px;
-}
-
-.palette li {
-	background-color: #e6e6e6;
-	border: 1px solid transparent;
-    border-color: #fff;
-}
-
-.palette .dndDragging {
-    opacity: 0.5;
-}
-
-.palette .dndDraggingSource {
-    opacity: 1.0;
 }
 
 /***************************** Designs *****************************/
