--- a/design/design.css
+++ b/design/design.css
@@ -54,20 +54,8 @@
  * The dnd-list should always have a min-height,
  * otherwise you can't drop to it once it's empty
  */
-.designs ul[dnd-list] {
-    margin: 0px;
-    min-height: 100px;
-    padding-left: 0px;
-}
-
-.designs li {
-    display: block;
-    float: left;
-    width: 100%;
-}
-
-.designs .design li {
-    width: auto;
+.design {
+    height: 100px;
 }
 
 /**
