--- a/design/design.css
+++ b/design/design.css
@@ -50,11 +50,15 @@
 
 /***************************** Designs *****************************/
 
+.designs {
+	margin-bottom: 10px;
+}
+
 /**
  * The dnd-list should always have a min-height,
  * otherwise you can't drop to it once it's empty
  */
-.design {
+.features {
     height: 100px;
 }
 
@@ -80,10 +84,20 @@
  * An element with .dndPlaceholder class will be added as child of the dnd-list
  * while the user is dragging over it.
  */
-.designs .design .dndPlaceholder {
-    background-color: #ddd;
-    display: block;
-    width: 50px;
-    height: 100px;
+.designs .features .dndPlaceholder {
+	display: inline-block;
+	width: 50px;
+	height: 100px;
+ 	background-color: #ddd;
     float: left;
+}
+
+/***************************** General *****************************/
+
+.add-design {
+    opacity: 0.33;
+}
+
+.add-design:hover {
+    opacity: 0.66;
 }
