--- a/design/design.css
+++ b/design/design.css
@@ -11,14 +11,6 @@
 	background-size: 100%;
 }
 
-.palette .dndDragging {
-    opacity: 0.5;
-}
-
-.palette .dndDraggingSource {
-    opacity: 1.0;
-}
-
 /***************************** Features *****************************/
 
 .feature {
@@ -50,44 +42,30 @@
 	margin-bottom: 10px;
 }
 
+.designs .dndPlaceholder {
+	display: inline-block;
+	width: 100%;
+	height: 50px;
+ 	background-color: #ddd;
+    float: left;
+}
+
 /***************************** Features *****************************/
 
-/**
- * The dnd-list should always have a min-height,
- * otherwise you can't drop to it once it's empty
- */
 .features {
     height: 100px;
 }
 
-/**
- * Reduce opacity of elements during the drag operation. This allows the user
- * to see where he is dropping his element, even if the element is huge. The
- * .dndDragging class is automatically set during the drag operation.
- */
-.features .dndDragging {
-    opacity: 0.7;
-}
-
-/**
- * The dndDraggingSource class will be applied to the source element of a drag
- * operation. It makes sense to hide it to give the user the feeling that he's
- * actually moving it. Note that the source element has also .dndDragging class.
- */
-.features .dndDraggingSource {
-    display: none;
-}
-
-/**
- * An element with .dndPlaceholder class will be added as child of the dnd-list
- * while the user is dragging over it.
- */
 .features .dndPlaceholder {
 	display: inline-block;
 	width: 50px;
 	height: 100px;
  	background-color: #ddd;
     float: left;
+}
+
+.feature .dndDraggingSource {
+    display: none;
 }
 
 /***************************** General *****************************/
@@ -102,4 +80,12 @@
 
 .glyphicon-grey:hover {
     opacity: 0.66;
+}
+
+.dndDragging {
+    opacity: 0.5;
+}
+
+.dndDraggingSource {
+    opacity: 1.0;
 }
