--- a/design/design.css
+++ b/design/design.css
@@ -47,10 +47,8 @@
 }
 
 .designs .dndPlaceholder {
-	display: inline-block;
 	width: 100%;
 	height: 50px;
- 	background-color: #ddd;
 }
 
 /***************************** Features *****************************/
@@ -60,11 +58,9 @@
 }
 
 .features .dndPlaceholder {
-	display: inline-block;
 	width: 50px;
 	height: 100px;
- 	background-color: #ddd;
-    float: left;
+ 	float: left;
 }
 
 .feature .dndDraggingSource {
@@ -91,4 +87,9 @@
 
 .dndDraggingSource {
     opacity: 1.0;
+}
+
+.dndPlaceholder {
+	display: inline-block;
+ 	background-color: #ddd;
 }
